8.8/README.md
## build-win64

This set of scripts build a 64-bit vips binary for Windows. They won't
make a 64-bit nip2, see `build-win32` for that.

You don't need to follow these instructions to make a Windows binary.
Instead, see the README in the parent directory to make a binary using
a Docker container. Only keep reading if you want to work on the build
scripts themselves. 

On Ubuntu, follow these steps as a regular user:

### Install mingw

You need the mingw cross-compiler to generate 64-bit Windows binaries.

	sudo apt install mingw-w64 mingw-w64-tools

The `tools` package provides `gendef`, which we use to generate .def files for
our DLLs.

### Install `jhbuild`

`jhbuild` runs the whole builds process. Install the packaged version:

	sudo apt install jhbuild

### Other packages 

Various other packages required during the build:

	sudo apt install cmake nasm gperf intltool

### Check the build variables

Have a look in `variables.sh` and make sure the version numbers and other
settings are right. 

### Build

Run:

  ./clean.sh
	export BASEDIR=$(pwd)
	jhbuild --file=jhbuildrc build --nodeps libvips-all

`BASEDIR` is needed by vips.modules to pass the toolchain file to cmake. 
It will take a while. 

You can use libvips-web and libvips-transform as targets too.

### Package

Run:

	./package-vipsdev.sh web

To make a nice `vips-dev-w64-web-x.y.z.zip` package. 

### TODO

* more testing
